<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About"
    android:orientation="vertical"
    android:background="@color/primary"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_marginTop="180dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/versionno"
        android:textColor ="#ffffff"
        android:textSize="22sp"
        android:layout_marginTop="10dp"
        android:textStyle="normal"
        android:textAlignment="center"
        android:layout_gravity="center"
        />

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:srcCompat="@drawable/arms"
        android:layout_margin="15dp"
        android:padding="5dp"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/copyright"
        android:textColor ="#ffffff"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:textStyle="normal"
        android:textAlignment="center"
        android:layout_gravity="center"
        />

</LinearLayout>