<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".HomeActivity"
    android:orientation="vertical"
    >
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="65dp"
        app:cardBackgroundColor="@color/primary"
        android:layout_margin="10dp"
        app:cardCornerRadius="6dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            >
            <TextView
                android:id="@+id/textViewhome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/primary"
                android:layout_weight="1"
                android:text="@string/mat_home"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="normal"

                />
            <Space
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageView
                android:id="@+id/aboutview"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/qn"
                android:layout_margin="5dp"
                android:onClick="homeButtons"
                />
            <ImageView
                android:id="@+id/messageView"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:srcCompat="@drawable/mchat"
                android:layout_margin="5dp"
                android:onClick="homeButtons"
                />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/primary"
        android:layout_margin="10dp"
        app:cardCornerRadius="6dp"
        >
        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            app:srcCompat="@drawable/agross"
            android:scaleType="fitXY"
            />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:background="@color/primary"
        />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/primary"
        android:layout_margin="10dp"
        app:cardCornerRadius="6dp"
        android:layout_weight="1"
        >
        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Welcome to MATIs Mobile Portal.\nThe portal will provide you the access to MATI website, MATI SMIS and MATI Institutes websites."
            android:background="@color/primary"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:padding="8dp"
            />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_margin="10dp"
        android:background="@color/primary"
        />
        <Button
            android:id="@+id/buttonMATCoreWebsite"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/mat_website"
            android:backgroundTint="@color/primary"
            android:textAllCaps="false"
            android:onClick="homeButtons"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="1dp"
            />
        <Button
            android:id="@+id/buttonMATWebsite"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/mat_college_website"
            android:textSize="18sp"
            android:backgroundTint="@color/primary"
            android:textAllCaps="false"
            android:onClick="homeButtons"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="1dp"
            />
    <Button
        android:id="@+id/buttonMATmis"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/mat_mis"
        android:textSize="18sp"
        android:backgroundTint="@color/primary"
        android:textAllCaps="false"
        android:onClick="homeButtons"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        />
</LinearLayout>